Update Swagger and Orerbook model
